--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="application-name" content="MOKOLÉ">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-title" content="MOKOLÉ">
-		<meta property="og:image" content="img/mokole-preview.png">
+		<meta property="og:image" content="/img/mokole-preview.png">
 		<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-icon-72x72.png">
