--- a/index.html
+++ b/index.html
@@ -546,6 +546,16 @@
 					</div>
 				</div>
 				<div id="after-game">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- MOKOLE -->
+					<ins class="adsbygoogle"
+					     style="display:block"
+					     data-ad-client="ca-pub-8237054068776864"
+					     data-ad-slot="9164368102"
+					     data-ad-format="auto"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
 				</div>
 			</div>
 			<div id="bottombar">
