--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			    font-family: Arial, Helvetica, sans-serif;
 			    font-size: 3vmin;
 		    }
-		    #game, #after-game {
+		    #game {
 			    display: none;
 		    }
 		    #grid {
