Move ads on first screen

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			    font-family: Arial, Helvetica, sans-serif;
 			    font-size: 3vmin;
 		    }
-		    #game {
+		    #game, #after-game {
 			    display: none;
 		    }
 		    #grid {
@@ -488,6 +488,18 @@
 						</button>
 					</div>
 					<br style="clear: both">
+					<center>
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- MOKOLE -->
+						<ins class="adsbygoogle"
+						     style="display:block"
+						     data-ad-client="ca-pub-8237054068776864"
+						     data-ad-slot="9164368102"
+						     data-ad-format="auto"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</center>
 					<p><b>MOKOLÉ</b> est un jeu de lettres de type Pendu qui consiste à trouver les <b>12 lettres</b> utilisées pour former une grille de <b>6 mots</b>.</p>
 					<p>Pour faciliter la tâche, <b>chacune des lettres à deviner est associée à une couleur</b> dans la grille.</p>
 					<p>Vous commencez la partie avec <b>5 <span class="lifes">vies</span></b> et un <span class="score">score</span> de 0, à chaque lettre trouvée vous gagnez des points mais <b>à chaque erreur vous perdez une vie</b>&nbsp;!</p>
@@ -546,16 +558,6 @@
 					</div>
 				</div>
 				<div id="after-game">
-					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-					<!-- MOKOLE -->
-					<ins class="adsbygoogle"
-					     style="display:block"
-					     data-ad-client="ca-pub-8237054068776864"
-					     data-ad-slot="9164368102"
-					     data-ad-format="auto"></ins>
-					<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
-					</script>
 				</div>
 			</div>
 			<div id="bottombar">
