--- a/index.html
+++ b/index.html
@@ -487,8 +487,7 @@
 							<small>Trouvez 12 lettres parmi 26, 5 points par lettre trouvée</small>
 						</button>
 					</div>
-					<br style="clear: both">
-					<center>
+					<center style="clear:both">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 						<!-- MOKOLE -->
 						<ins class="adsbygoogle"
