--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 		    }
 		    #success {
 			    display: none;
-			    background: url('/success.png') left center no-repeat;
+			    background: url('/img/success.png') left center no-repeat;
 			    background-size: contain;
 			    color: #25ae88;
 		    }
