Update aftergame css

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			    z-index: 2;
 			    overflow: scroll;
 		    }
-		    #before-game {
+		    #before-game, #after-game, #after-highscore {
 			    width: 95vmin;
 			    padding: 1ex 1em 15vmin 1em;
 			    margin: 0px auto;
