--- a/index.html
+++ b/index.html
@@ -237,6 +237,33 @@
 			    background: url('/img/flame.png') left center no-repeat;
 			    background-size: contain;
 		    }
+		    a.button {
+			    display: block;
+			    width: 30%;
+			    height: 30%;
+			    background-size: cover;
+		    }
+		    .facebook {
+			    background: url('/img/facebook.png') center center no-repeat;
+		    }
+		    .twitter {
+			    background: url('/img/twitter.png') center center no-repeat;
+		    }
+		    .googleplus {
+			    background: url('/img/googleplus.png') center center no-repeat;
+		    }
+		    .home {
+			    font-family: 'myFont';
+			    background: black url('/img/home.png') left center no-repeat;
+			    background-size: contain;
+			    padding-left: 150px;
+		    }
+		    .replay {
+			    font-family: 'myFont';
+			    background: green url('/img/replay.png') left center no-repeat;
+			    background-size: contain;
+			    padding-left: 150px;			    
+		    }
 		</style>
 		<script type="text/javascript">
 			var datas = [];
@@ -568,11 +595,23 @@
 					<center id="adsense-aftergame">
 					</center>
 					<div id="got-highscore">
-						NEW HIGHSCORE
+						<h1>Nouveau record !</h1>
+						<p>Défiez vos amis et faîtes connaître MOKOLÉ en partageant votre score !</p>
 					</div>
 					<div id="not-highscore">
-						AFTER GAME
+						<h1>Ce jeu vous plaît ?</h1>
+						<p>Faites découvrir MOKOLÉ à vos amis sur les réseaux sociaux !</p>
 					</div>
+					<center>
+						<a id="share-facebook" class="button facebook" rel="nofollow" target="_blank" href="http://www.facebook.com/sharer.php?display=popup&u=http%3A%2F%2Fmokole.com%2F&t=MOKOLÉ%le%20jeu%20de%20lettres"> </a>
+						<a id="share-twitter" class="button twitter" rel="nofollow" target="_blank" href="https://twitter.com/share?original_referer=http%3A%2F%2Fmokole.com%2F&source=tweetbutton&text=MOKOLÉ%le%20jeu%20de%20lettres&url=http%3A%2F%2Fmokole.com%2F&via=&hashtags=MOKOLE
+"> </a>
+						<a id="share-googleplus" class="button googleplus" rel="nofollow" target="_blank" href="https://plus.google.com/share?url=http%3A%2F%2Fmokole.com&t=MOKOLÉ%le%20jeu%20de%20lettres"> </a>
+					</center>
+					<center>
+						<button class="replay" onclick="document.getElementById('after-game').style.display = 'none'; fill_grid(level);">JOUER UNE AUTRE PARTIE</button>
+						<button class="home" onclick="document.getElementById('after-game').style.display = 'none'; document.getElementById('before-game').style.display = 'block';">REVENIR A L'ECRAN D'ACCUEIL</button>
+					</center>
 				</div>
 			</div>
 			<div id="bottombar">
