--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 		    }
 		    .replay {
 			    font-family: 'myFont';
-			    background: green url('/img/replay.png') left center no-repeat;
+			    background: green url('/img/play.png') left center no-repeat;
 			    background-size: contain;
 			    padding-left: 150px;			    
 		    }
