--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 		    }
 		    a.button {
 			    display: block;
-			    width: 30%;
-			    height: 30%;
+			    width: 10vmin;
+			    height: 10vmin;
 			    background-size: cover;
 		    }
 		    .facebook {
@@ -603,10 +603,10 @@
 						<p>Faites découvrir MOKOLÉ à vos amis sur les réseaux sociaux !</p>
 					</div>
 					<center>
-						<a id="share-facebook" class="button facebook" rel="nofollow" target="_blank" href="http://www.facebook.com/sharer.php?display=popup&u=http%3A%2F%2Fmokole.com%2F&t=MOKOLÉ%le%20jeu%20de%20lettres"> </a>
+						<a id="share-facebook" class="button facebook" rel="nofollow" target="_blank" href="http://www.facebook.com/sharer.php?display=popup&u=http%3A%2F%2Fmokole.com%2F&t=MOKOLÉ%le%20jeu%20de%20lettres"></a>
 						<a id="share-twitter" class="button twitter" rel="nofollow" target="_blank" href="https://twitter.com/share?original_referer=http%3A%2F%2Fmokole.com%2F&source=tweetbutton&text=MOKOLÉ%le%20jeu%20de%20lettres&url=http%3A%2F%2Fmokole.com%2F&via=&hashtags=MOKOLE
-"> </a>
-						<a id="share-googleplus" class="button googleplus" rel="nofollow" target="_blank" href="https://plus.google.com/share?url=http%3A%2F%2Fmokole.com&t=MOKOLÉ%le%20jeu%20de%20lettres"> </a>
+"></a>
+						<a id="share-googleplus" class="button googleplus" rel="nofollow" target="_blank" href="https://plus.google.com/share?url=http%3A%2F%2Fmokole.com&t=MOKOLÉ%le%20jeu%20de%20lettres"></a>
 					</center>
 					<center>
 						<button class="replay" onclick="document.getElementById('after-game').style.display = 'none'; fill_grid(level);">JOUER UNE AUTRE PARTIE</button>
