--- a/index.html
+++ b/index.html
@@ -257,12 +257,18 @@
 			    background: black url('/img/home.png') left center no-repeat;
 			    background-size: contain;
 			    padding-left: 150px;
+			    color: white;
+			    font-size: 3vmin;
+			    display: block;
 		    }
 		    .replay {
 			    font-family: 'myFont';
 			    background: green url('/img/play.png') left center no-repeat;
 			    background-size: contain;
 			    padding-left: 150px;			    
+			    color: white;
+			    font-size: 3vmin;
+			    display: block;
 		    }
 		</style>
 		<script type="text/javascript">
