fix some buttons

--- a/index.html
+++ b/index.html
@@ -677,12 +677,16 @@
 							</table>
 						</div>
 						<button id="success" class="btn green" onclick="after_success()">
-							<h2>Bravo, c'est gagné !</h2>
-							<small>Cliquez ici pour continuer la partie.</small>
+							<span>
+								<h2>Bravo, c'est gagné !</h2>
+								<small>Cliquez ici pour continuer la partie.</small>
+							</span>
 						</button>
 						<button id="failure" class="btn red" onclick="after_failure()">
-							<h2>Oops, c'est perdu !</h2>
-							<small>Cliquez ici pour rejouer ou partager votre score.</small>
+							<span>
+								<h2>Oops, c'est perdu !</h2>
+								<small>Cliquez ici pour rejouer ou partager votre score.</small>
+							</span>
 						</button>
 					</div>
 				</div>
