--- a/index.html
+++ b/index.html
@@ -708,8 +708,8 @@
 						<a id="share-googleplus" class="button googleplus" rel="nofollow" target="_blank" href="https://plus.google.com/share?url=http%3A%2F%2Fmokole.com&t=MOKOLÉ%20le%20jeu%20de%20lettres"></a>
 					</center>
 					<center>
-						<button class="btn green replay" onclick="document.getElementById('after-game').style.display = 'none'; fill_grid(level);">JOUER UNE AUTRE PARTIE</button>
-						<button class="btn orange home" onclick="document.getElementById('after-game').style.display = 'none'; document.getElementById('before-game').style.display = 'block';">REVENIR A L'ECRAN D'ACCUEIL</button>
+						<button class="btn green replay" onclick="document.getElementById('after-game').style.display = 'none'; fill_grid(level);"><span>JOUER UNE AUTRE PARTIE</span></button>
+						<button class="btn orange home" onclick="document.getElementById('after-game').style.display = 'none'; document.getElementById('before-game').style.display = 'block';"><span>REVENIR A L'ECRAN D'ACCUEIL</span></button>
 					</center>
 				</div>
 			</div>
