some nbsp added

--- a/index.html
+++ b/index.html
@@ -707,12 +707,12 @@
 					<center id="adsense-aftergame">
 					</center>
 					<div id="got-highscore">
-						<h1>Nouveau record !</h1>
-						<p>Défiez vos amis et faîtes connaître MOKOLÉ en partageant votre score !</p>
+						<h1>Nouveau record&nbsp;!</h1>
+						<p>Défiez vos amis et faîtes connaître MOKOLÉ en partageant votre score&nbsp;!</p>
 					</div>
 					<div id="not-highscore">
-						<h1>Ce jeu vous plaît ?</h1>
-						<p>Faites découvrir MOKOLÉ à vos amis sur les réseaux sociaux !</p>
+						<h1>Ce jeu vous plaît&nbsp;?</h1>
+						<p>Faites découvrir MOKOLÉ à vos amis sur les réseaux sociaux&nbsp;!</p>
 					</div>
 					<center>
 						<a id="share-facebook" class="button facebook" rel="nofollow" target="_blank" href="http://www.facebook.com/sharer.php?display=popup&u=http%3A%2F%2Fmokole.com%2F&t={0}" title="Partager sur Facebook"></a>
