--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 					<p>Quand une grille est complétée, vous touchez un bonus de fin de partie égal à votre nombre de vies et vous gagnez une vie supplémentaire.</p>
 					<p>Le jeu se termine lorsque vous n'avez plus de vie.</p>
 					<center>
-						<a href="http://www.avenir-amoureux.com/?idw=1451" target="_blank" rel="nofollow"><img class="fixed-ratio-resize" src="/img/aveniramoureux.gif"></a> 
+						<a href="http://www.tarot-amoureux.com/?idw=1451" target="_blank" rel="nofollow"><img class="fixed-ratio-resize" src="/img/tarotamoureux.gif"></a> 
 					</center>
 					<h3>Astuces et informations sur MOKOLÉ</h3>					
 					<p>Vous pouvez utiliser la souris ou le clavier pendant le jeu (appuyez sur la touche "entrée" pour passer à la grille suivante ou refaire une partie).</p>
